# ai-course-for-kids

./: ppt-content.md
python/: compress_images.py  download_images.py  main.py  merge_to_ppt.py  ppt.json  pyproject.toml
